apps/torrent/qbittorrent/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  labels:
    app: qbittorrent
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      containers:
        - name: qbittorrent
          image: hotio/qbittorrent:release-4.6.3
          imagePullPolicy: IfNotPresent
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          ports:
            - containerPort: 8080
              name: qbittorrent
          volumeMounts:
            - mountPath: /config/config/qBittorrent.conf
              name: qbittorrent-config
              subPath: qBittorrent.conf
            - mountPath: /config
              name: qbittorrent-data
            - mountPath: /config/wireguard
              name: wireguard
            - mountPath: /data/downloads
              name: nfs-share
      volumes:
        - name: qbittorrent-config
          configMap:
            name: qbittorrent-config
            defaultMode: 0777
        - name: qbittorrent-data
          persistentVolumeClaim:
            claimName: qbittorrent-pvc
        - name: nfs-share
          nfs:
            server: nas01.bubylou.com
            path: /srv/share/Downloads
        - name: wireguard
          secret:
            secretName: wireguard
            items:
              - key: mullvad
                path: wg0.conf
