apps/torrent/qbittorrent/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.middlewares: "sso-authelia@kubernetescrd"
spec:
  rules:
    - host: qbittorrent.bubylou.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbittorrent
                port:
                  number: 8080
  tls:
    - hosts:
      - qbittorrent.bubylou.com
      secretName: qbittorrent-bubylou-tls
